fix: chart on mobile devices style

--- a/src/pages/Stats/Stats.css
+++ b/src/pages/Stats/Stats.css
@@ -54,3 +54,23 @@
 .stats__chart .ant-select {
     margin-left: 10px;
 }
+
+@media screen and (max-width: 767px) {
+    .stats__wrapper {
+        flex-wrap: wrap;
+        padding: 0;
+    }
+
+    .stats__menu {
+        width: 100%;
+        flex: 0 0 100%;
+        padding-top: 0;
+        padding-bottom: 20px;
+        order: 2;
+    }
+
+    .stats__chart {
+        flex: 0 0 100%;
+        order: 1;
+    }
+}
